# FastSense

./: .gitignore  CITATION.cff  CLAUDE.md  ConsoleProgressBar.m  FastPlot.m  FastPlotDefaults.m  FastPlotDock.m  FastPlotFigure.m  FastPlotTheme.m  FastPlotToolbar.m  README.md  build_mex.m  install.m  miss_hit.cfg  presentation.html  run_profile.m  setup.m
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md
benchmarks/: bench_compositetag_merge.m  bench_consumer_migration_tick.m  bench_dashboard.m  bench_event_marker_regression.m  bench_monitortag_append.m  bench_monitortag_tick.m  bench_sensortag_getxy.m  bench_tag_pipeline_1k.m  benchmark.m  benchmark_datastore.m  benchmark_features.m  benchmark_memory.m  benchmark_resolve.m  benchmark_resolve_stress.m  benchmark_zoom.m  profile_datastore.m
bridge/python/: pyproject.toml
bridge/python/fastplot_bridge/: __init__.py  __main__.py  blob_decoder.py  server.py  sqlite_reader.py  tcp_client.py
bridge/python/fastsense_bridge/: __init__.py  __main__.py  server.py  sqlite_reader.py
bridge/python/tests/: test_blob_decoder.py  test_server.py  test_sqlite_reader.py  test_tcp_client.py
docs/: 2026-03-06-fastsense-design.md  DerivedTag-spec.md  generate_readme_images.m
examples/: benchmark.m  benchmark_20_dashboards.m  benchmark_dashboard.m  benchmark_features.m  benchmark_resolve.m  benchmark_zoom.m  demo_all.m  demo_live.m  demo_toolbar_rework.m  example_100M.m  example_alarm_bands.m  (+77 more)
(+1343 files in other folders)
