[project]
name = "fastsense-bridge"
version = "0.2.0"
description = "Lean connectivity bridge between MATLAB and external frameworks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx>=0.25"]

[project.scripts]
fastsense-bridge = "fastsense_bridge.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
